interface updates/fixes: * fixed h2 spacing (parameters and preview box equally) * equal x and y spacings between boxes * char chooser less to bottom, fixed arrows left/right * typeface = bespoke

--- a/views/screen.scss
+++ b/views/screen.scss
@@ -9,7 +9,7 @@ $right_column_width: 710px;
 $border_width: 3px;
 $box_spacing_y: 7px;
 
-$box_spacing_x: 30px;
+$box_spacing_x: 27px;
 $preview_box_width: ($right_column_width - $box_spacing_x) / 2;
 $preview_box_width_full: $right_column_width;
 $preview_box_height: 340px;
@@ -101,7 +101,7 @@ h2 {
     font-size: 15px;
     font-weight: bold;
     margin: 0;
-    padding: 2px 30px 0 7px;
+    padding: 2px 8px 1px 7px;
     display: inline-block;
     background: $active_color;
 }
@@ -163,8 +163,13 @@ a, span.action {
 }
 
 .box-content {
-    padding: 0 7px;
+    padding: 2px 7px;
     background: #fff;
+
+    .static-value {
+        float: right;
+        width: 30%;
+    }
 }
 
 #main {
@@ -319,14 +324,12 @@ a, span.action {
     .static-value {
         font-size: 12px;
         line-height: 21px;
-        float: right;
-        width: 30%;
     }
 
     .parameter-panel-mode-toggle {
         position: absolute;
         right: 0;
-        top: 3px;
+        top: 2px;
 
         .action.active {
             font-weight: bold;
@@ -346,7 +349,8 @@ a, span.action {
     }
 
     .preview-box-content {
-        border: 3px solid #fff;
+        margin-top: $border_width * -1; // correct the border width, such that h2 corresponds to parameters h2
+        border: $border_width solid #fff;
         width: $preview_box_content_width;
         height: $preview_box_height;
         overflow: hidden;
@@ -450,14 +454,15 @@ div.char-chooser {
     bottom: 0;
     left: 0;
     width: $preview_box_content_width;
-    height: 12px;
+    height: 16px;
+    line-height: 15px;
     overflow: hidden;
+
 
     ul {
         position: absolute;
-        top: 2px;
+        top: 3px;
         width: 2000px;
-        height: 15px;
     }
 
     li {
@@ -465,7 +470,7 @@ div.char-chooser {
         width: $preview_box_content_width;
 
         a {
-            font-size: 10px;
+            font-size: 11px;
             padding: 0 2px;
 
             &.active {
@@ -478,18 +483,19 @@ div.char-chooser {
 
 a.char-chooser {
     position: absolute;
-    bottom: 0;
+    bottom: 3px;
     z-index: 1;
+    width: 10px;
     color: transparent;
 
     &.left {
-        left: 0;
-        background: url(/img/icons.png) no-repeat scroll -99px -17px #fff;
+        left: 2px;
+        background: url(/img/icons.png) no-repeat scroll -99px -18px #fff;
     }
 
     &.right {
-        right: 0;
-        background: url(/img/icons.png) no-repeat scroll -36px -18px #fff;
+        right: 2px;
+        background: url(/img/icons.png) no-repeat scroll -36px -19px #fff;
     }
 }
 
